--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>TD</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <script src="jquery-3.4.1.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Le Titre</h1>
+    <h1 id="titre">Le Titre</h1>
 </body>
 </html>
