ça change de couleur quand on hover

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1 id="titre">Le Damier</h1>
+    <h1 id="titre">Le damier</h1>
 </body>
 </html>
